0.25-dev
-revise textarea object.
-revise mouse set_cursor method.

0.25    2021-11-30
-create pyjsdl-ts port.
-revise module for transcrypt.
-revise sprite orderedupdates.
-revise font render.
-update surface blit for rect arg.
-add sprite group alias.
-revise surface setpixel.
-revise color arg processing.
-refactor sprite collide methods.
-revise imageloader processing.
-revise sprite groupcollide for dict obj key.
-add sprite layeredupdates.
-add cursors get_cursor_types.
-add canvas contextmenu handler.
-revise mouseevent positioning.
-add mouse wheel event.
-add vector object.
-revise mixer processing.
-add mixer music object.
-add mixer channel endevent.
-add mixer channel queue.
-refactor event handler for performance.
-add key set_repeat method.
-revise key event handler.
-update key event handler.

0.24    2021-04-28
-revise rect move/inflate args processing.
-revise rect attributes.
-revise ndarray shape for inheritance.
-add env check.
-revise quit method to stop mixer.
-revise quit method to stop timers.
-update time set_timer for event argument.
-revise app to use webkit2.
-update for python 2/3 compatibility.

0.23    2021-04-06
-update event handling.
-update surface get_at to return color object.
-refactor surface colorkey methods.
-revise sprite blit process.
-update mask for optimization.
-update ndarray and bitset for optimization.
-update time wait to properly delay callback.
-revise requestanimationframe shim.
-update clock with performance time.
-update clock tick with performance time.
-update asynchronous loop process to optimize.
-update for python 2/3 compatibility.

0.22    2019-04-06
-add display set_callback method.
-update Canvas handling of callback change.
-add time set_timer method.
-update sprite to revise member groups.
-update sprite argument handling.
-update sprite collide_mask to use mask.overlap.
-refactor rect for optimization.
-update display setup to accept callback function or object with run method.